orquestacion/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm
  labels:
    app: asm
    environment: production
